[FIX] password show button's overflow issue

--- a/app/styles/form.module.scss
+++ b/app/styles/form.module.scss
@@ -86,6 +86,12 @@
         }
     }
 
+    &--password {
+        input {
+            inline-size: 0;
+        }
+    }
+
     &:has(input:not(:focus-visible)) {
         &:has(input[data-show-border-vaildation="true"]) {
             &:has(input:invalid) {
